<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.prankul.todo.TaskActivity" >

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_search"
        android:title=""
        app:showAsAction="always"
        android:actionViewClass="android.widget.SearchView"/>
    
     <item
        android:id="@+id/add_task"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_add"
        android:title=""
        app:showAsAction="always"/>
     
      <item
        android:id="@+id/archive_task"
        android:orderInCategory="100"
        android:title="@string/archive_task"
        app:showAsAction="never"/>
      
       <item
        android:id="@+id/export_task"
        android:orderInCategory="100"
        android:title="@string/export_task"
        app:showAsAction="never"/>
       
        <item
        android:id="@+id/share_task"
        android:orderInCategory="100"
        android:title="@string/share_task"
        app:showAsAction="never"/>

</menu>
